fix: fix flickering for next pokemon

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -6,4 +6,16 @@
   background: var(--color-accent);
   color: var(--color-white);
   margin-bottom: var(--spacing-lg);
+  min-height: 100px;
+
+  a {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
+  margin-right: var(--spacing-xs);
 }
