--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,10 +28,6 @@
   --radius-sm: 4px;
   --radius-md: 8px;
   --radius-lg: 16px;
-
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 16px;
 }
 
 #root {
@@ -72,4 +68,11 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.content {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0;
+  min-height: calc(100vh - 100px);
 }
